crates/atlas-runtime/tests/corpus/pass/arithmetic/factorial.atlas
fn factorial(n: number) -> number {
    if (n <= 1) {
        return 1;
    }
    return n * factorial(n - 1);
}

print(factorial(1));
print(factorial(5));
print(factorial(10));
