crates/atlas-runtime/tests/corpus/fail/type_errors/return_type_mismatch.atlas
fn get_number() -> number {
    return "not a number";
}
